--- a/book-app/src/App.css
+++ b/book-app/src/App.css
@@ -2,20 +2,34 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background: #f4f4f4;
-  color: #333;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
 }
 
 header {
-  background: #333;
+  background: rgb(0, 0, 0);
   color: #fff;
   padding: 1rem;
-  text-align: center;
+  text-align: left;
 }
 
-.search-bar, .recommendation-switch {
-  margin-top: 1rem;
-  text-align: center;
+.navbar {
+  display: flex;
+  align-items: center; /* Aligns items vertically in the center */
+  justify-content: space-between; /* Spreads out the items */
+  padding: 1.25rem 5rem; /* Add padding for some spacing inside the header */
+}
+
+.navbar-brand {
+  margin: 0;
+  flex-grow: 1; 
+  font-size: 25px;
+}
+.search-bar {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  text-align: center; /* Center text content inside .search-box */
 }
 
 .search-bar input[type="text"] {
@@ -34,9 +48,20 @@ header {
   cursor: pointer;
 }
 
-.search-bar button:hover {
-  background-color: #4cae4c;
+
+
+.search-button {
+  font-size: 15px;
+  background-color: rgb(70, 67, 67);
+  padding: 10px;
+  border-radius: 10%;
+  transition: background-color 0.5s ease;
 }
+
+.search-button:hover {
+  background-color: rgb(132, 126, 126);
+}
+
 
 .recommendation-switch label {
   cursor: pointer;
@@ -54,8 +79,8 @@ header {
 
 .book-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Adjust minmax values as needed */
-  gap: 20px;
+  grid-template-columns: repeat(5, 1fr); /* Adjust minmax values as needed */
+  gap: 30px;
   justify-content: center; /* This centers the grid items in the container */
   padding: 20px;
 }
@@ -63,31 +88,36 @@ header {
 .book-card {
   /* Your existing styles for book-card */
   /* You might want to set a max-width for book cards for better appearance */
+  background-clip: padding-box;
   display: flex;
-  height: 250px;
-  max-width: 200px; /* Example width */
-  background: #fff;
+  position: relative;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  border-radius: 10px;
   overflow: hidden;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  border: 1px solid transparent; /* Add a transparent border for a smooth transition */
+  transition: all 0.5s ease;
+  border: 2px solid transparent; /* Add a transparent border for a smooth transition */
 }
 
 .book-card:hover {
-  transform: scale(1.03); /* Slightly scale up the card */
+  border: 2px solid hsl(44, 100%, 50%);
+  transform: scale(1.05); /* Slightly scale up the card */
   box-shadow: 0 6px 12px rgba(0,0,0,0.2); /* Optionally enhance the shadow for better effect */
-  border: 1px solid #007bff; /* Highlight border */
 }
 
 .book-title {
+  white-space: nowrap; 
+  overflow: hidden;   
+  text-overflow: ellipsis; 
+
+  width: 100%;     
+  height: 30px;
+  
+  font-size: 20px;
+
   margin-top: auto;
-  width: 100%;
-  font-size: 10px;
-  overflow: hidden;
-  height: 28px;
-  padding: 3px 3px 3px 4px;
-  background-color: grey;
+  padding: 10px 20px;
+
+  color: white;
+  background-color: rgb(6, 28, 37);
 }
 
 .modal {
@@ -98,33 +128,55 @@ header {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  /* overflow: auto; */
   background-color: rgba(0,0,0,0.4);
 }
 
+.modal-content .container {
+  overflow-y: auto;
+}
+
 .modal-content {
+  box-sizing: border-box;
   background-color: #fefefe;
   padding: 20px;
   border: 1px solid #888;
   border-radius: 20px;
-  width: 25%; /* Adjust width as needed */
+  width: 25%;
   height: 50%;
-  overflow-y: auto;
-  position: fixed; /* Use fixed instead of absolute */
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.centered-content {
+  text-align: center;
+}
+
+.modal-content img {
+  max-width: 100%;
+  height: auto;
 }
 
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: grey;
 }
 
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
+}
+
+.book-details {
+  width: 100%;
 }
